--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>API-игра</title>
+  <title>API-game</title>
   <style>
     body {
       background: #f2f2f2;
@@ -61,8 +61,8 @@
     </select>
     <input type="text" id="url" placeholder="https://api.example.com/data" />
     <textarea id="body" placeholder='{"key": "value"}'></textarea>
-    <button onclick="sendRequest()">Отправить запрос</button>
-    <pre id="response">Здесь появится ответ...</pre>
+    <button onclick="sendRequest()">Send request</button>
+    <pre id="response">Answer would appear here</pre>
   </div>
 
   <script>
@@ -75,12 +75,12 @@
       try {
         parsedBody = JSON.parse(rawBody || '{}');
       } catch (e) {
-        parsedBody = { error: "Неверный JSON" };
+        parsedBody = { error: "Invalid JSON" };
       }
 
       const mockResponse = {
         status: 200,
-        message: "Фейковый ответ от сервера",
+        message: "Fake server response",
         yourRequest: {
           method: method,
           url: url,
