i18n: translate 'Попробуй API-запрос' UI text to English
Translated 'Попробуй API-запрос' to 'Try an API request' for consistency with the rest of the English UI.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="api-widget">
-    <h2>Попробуй API-запрос</h2>
+    <h2>Try API-request</h2>
     <select id="method">
       <option>GET</option>
       <option>POST</option>
