Add support for PUT, PATCH, and DELETE methods
Expanded method dropdown to include PUT, PATCH, and DELETE.
Ensures users can simulate a broader range of API operations.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang = "en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -58,6 +58,9 @@
     <select id="method">
       <option>GET</option>
       <option>POST</option>
+      <option>PUT</option>
+      <option>PATCH</option>
+      <option>DELETE</option>
     </select>
     <input type="text" id="url" placeholder="https://api.example.com/data" />
     <textarea id="body" placeholder='{"key": "value"}'></textarea>
